[package]
name = "todo-gosse"
version = "0.2.0"
edition = "2024"
authors = ["nahounou gosse"]
description = "Une application CLI de gestion de tâches"
license = "MIT"
repository = "https://github.com/gosse123/todo-v2"
readme = "README.md"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3.1.1"
dialoguer = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
directories = "6"
